# mapext

./: .gitignore  .gitmessage  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: mapext-ci.yml  mapext-lint-checking.yml  mapext-pytest.yml
docs/source/: api.rst  conf.py  index.rst  install.rst  mapext.core.rst  mapext.emission.rst  mapext.photometry.rst  mapext.rst  mapext.simulation.rst  modules.rst
docs/source/_static/: references.bib
mapext/: __init__.py
mapext/core/: __init__.py  beam.py  map.py  projection.py  source.py  stokes.py  utils.py
mapext/emission/: __init__.py  continuum.py  core.py  polarisation.py  visualisation.py
mapext/photometry/: __init__.py  aperturephotometry.py
mapext/simulation/: __init__.py  core.py  noise.py  pointsrc.py
tests/: test_aperturePhoto.py  test_core-map.py  test_core-stokes.py  test_emission-continuum.py  test_emission-core.py  test_modeling.py  test_simulation-noise.py  test_simulation-pointsrc.py  test_simulation.py
